--- a/package.json
+++ b/package.json
@@ -11,5 +11,17 @@
     "url": "simplichat"
   },
   "author": "abhilash",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jade": "^1.11.0",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.4",
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.6.1"
+  }
 }
